# haskell-servant-realworld-example-app

./: .gitignore  default.nix  haskell-servant-realworld-example-app.cabal  package.nix  shell.nix
database/migrations/: sqitch.plan
database/migrations/deploy/: create-article-tags.sql  create-comments.sql  create-tags.sql
database/migrations/verify/: create-favorites.sql
database/scripts/: create  start
src/: DB.hs  Main.hs  Types.hs
src/ConduitApp/: Attribute.hs  Database.hs  Web.hs
src/ConduitApp/Articles/: Database.hs  Web.hs
src/ConduitApp/Articles/Database/: Article.hs  ArticleTag.hs  Attributes.hs  Commands.hs  Decorated.hs  Favorite.hs  Queries.hs
src/ConduitApp/Articles/Web/: Article.hs  Create.hs  Destroy.hs  Favorite.hs  Feed.hs  QueryAll.hs  Unfavorite.hs  Update.hs
src/ConduitApp/Comments/: Database.hs  Web.hs
src/ConduitApp/Comments/Database/: Comment.hs
src/ConduitApp/Comments/Web/: Comment.hs
src/ConduitApp/Tags/: Database.hs  Web.hs
src/ConduitApp/Tags/Database/: Tag.hs
src/ConduitApp/Users/: Database.hs  Web.hs
src/ConduitApp/Users/Commands/: Follow.hs  Unfollow.hs
src/ConduitApp/Users/Database/: Attributes.hs  Commands.hs  Follow.hs  Queries.hs  User.hs
src/ConduitApp/Users/Web/: Account.hs  Authenticate.hs  Follow.hs  GetCurrent.hs  Profile.hs  Register.hs  Unfollow.hs  UpdateCurrent.hs  ViewProfile.hs
src/ConduitApp/Web/: Auth.hs  Internal.hs  Namespace.hs
src/Data/Aeson/: Extended.hs
src/GHC/Records/: Extended.hs
test/ConduitApp/: WebSpec.hs
test/ConduitApp/Articles/: DatabaseSpec.hs
test/ConduitApp/Comments/: DatabaseSpec.hs
test/ConduitApp/Spec/: Database.hs  Web.hs
test/ConduitApp/Tags/: DatabaseSpec.hs
test/ConduitApp/Users/: DatabaseSpec.hs
