name:                haskell-servant-realworld-example-app
version:             0.0.1.0
homepage:            https://github.com/dorlowd/haskell-servant-realworld-example-app#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Orłowski
maintainer:          orlowd+gh@gmail.com
copyright:           2017 Daniel Orłowski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library conduit-app-core
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    aeson,
    aeson-casing,
    beam-core,
    beam-postgres,
    bytestring,
    conduit,
    containers,
    data-default,
    errors,
    generic-lens,
    jwt,
    lens,
    mtl,
    postgresql-simple,
    resource-pool,
    scrypt,
    servant,
    servant-server,
    text,
    time,
    transformers,
    validation,
    wai
  exposed-modules:
    ConduitApp.Articles.Database
    ConduitApp.Articles.Database.Article
    ConduitApp.Articles.Database.ArticleTag
    ConduitApp.Articles.Database.Attributes
    ConduitApp.Articles.Database.Commands
    ConduitApp.Articles.Database.Decorated
    ConduitApp.Articles.Database.Favorite
    ConduitApp.Articles.Database.Queries
    ConduitApp.Articles.Web
    ConduitApp.Articles.Web.Article
    ConduitApp.Articles.Web.Create
    ConduitApp.Articles.Web.Destroy
    ConduitApp.Articles.Web.Favorite
    ConduitApp.Articles.Web.Feed
    ConduitApp.Articles.Web.QueryAll
    ConduitApp.Articles.Web.Unfavorite
    ConduitApp.Articles.Web.Update
    ConduitApp.Attribute
    ConduitApp.Comments.Database
    ConduitApp.Comments.Database.Comment
    ConduitApp.Comments.Web
    ConduitApp.Comments.Web.Comment
    ConduitApp.Database
    ConduitApp.Tags.Database
    ConduitApp.Tags.Database.Tag
    ConduitApp.Tags.Web
    ConduitApp.Users.Database
    ConduitApp.Users.Database.Attributes
    ConduitApp.Users.Database.Queries
    ConduitApp.Users.Database.Commands
    ConduitApp.Users.Database.Follow
    ConduitApp.Users.Database.User
    ConduitApp.Users.Web
    ConduitApp.Users.Web.Account
    ConduitApp.Users.Web.Authenticate
    ConduitApp.Users.Web.Follow
    ConduitApp.Users.Web.GetCurrent
    ConduitApp.Users.Web.Profile
    ConduitApp.Users.Web.Register
    ConduitApp.Users.Web.Unfollow
    ConduitApp.Users.Web.UpdateCurrent
    ConduitApp.Users.Web.ViewProfile
    ConduitApp.Web
    ConduitApp.Web.Auth
    ConduitApp.Web.Internal
    ConduitApp.Web.Namespace
    Data.Aeson.Extended
    GHC.Records.Extended
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    OverloadedLabels
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    NoImplicitPrelude
  ghc-options:
    -Wall

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  build-depends:
    base >= 4.9 && < 5,
    beam-core,
    bytestring,
    conduit-app-core,
    containers,
    hspec,
    hspec-core,
    hspec-wai,
    hspec-wai-json,
    http-types,
    jwt,
    lens,
    lens-aeson,
    postgresql-simple,
    resource-pool,
    scrypt,
    servant-server,
    text,
    vector,
    wai,
    wai-extra
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
  other-modules:
    ConduitApp.Articles.DatabaseSpec
    ConduitApp.Comments.DatabaseSpec
    ConduitApp.Spec.Database
    ConduitApp.Spec.Web
    ConduitApp.Tags.DatabaseSpec
    ConduitApp.Users.DatabaseSpec
    ConduitApp.WebSpec

executable haskell-servant-realworld-example-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , servant
                     , servant-server
                     , mtl
                     , wai
                     , warp
                     , aeson
                     , sqlite-simple
                     , jwt
                     , containers
                     , bytestring
  other-modules: Types, DB
